Fix background colour of time on mobile.

--- a/src/darkmode.css
+++ b/src/darkmode.css
@@ -28,6 +28,7 @@
   --program-date-line: #888;
   --program-time-line: #ccc;
   --program-item-line: #bbb;
+  --program-time-bg: #444;
   --program-tags-fg: #bbb;
   --program-expanded-bg: #333;
   --permalink-icon-fg: #265c83;
